--- a/templates/login.html
+++ b/templates/login.html
@@ -2,15 +2,12 @@
 
 {% block content%}
 <form class="form-signin" method="POST" action="">{% csrf_token %}
-  <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
-  {% if error %}
-  {{ error }}
-  {% endif %}
+  <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
   <label for="inputEmail" class="sr-only">User Name</label>
   <input type="text" id="inputUserName" class="form-control" name='username' placeholder="Username" required autofocus>
   <label for="inputPassword" class="sr-only">Password</label>
   <input type="password" id="inputPassword" class="form-control" name='password' placeholder="Password" required>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
   <p class="mt-5 mb-3 text-muted">&copy; 2020-2020</p>
 </form>
 {% endblock content%}
