--- a/templates/list.html
+++ b/templates/list.html
@@ -15,8 +15,8 @@
   <div class="alert alert-success" role="alert">
     <p>タイトル：<a href="{% url 'detail' item.pk %}">{{ item.title }}</a></p>
     <p>投稿者：{{ item.author }}</p>
-    <a href="#" class="btn btn-primary" role="button" aria-pressed="true">いいね</a>
-    <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">既読</a>
+    <a href="#" class="btn btn-primary" role="button" aria-pressed="true">いいね({{item.good}})</a>
+    <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">既読({{item.read}}人)</a>
   </div>
   {% endfor %}
   <a href="{% url 'logout' %}">ログアウト</a>
