--- a/templates/list.html
+++ b/templates/list.html
@@ -19,6 +19,7 @@
     <a href="#" class="btn btn-secondary" role="button" aria-pressed="true">既読({{item.read}}人)</a>
   </div>
   {% endfor %}
+  <a href="{% url 'create' %}">新規投稿</a>
   <a href="{% url 'logout' %}">ログアウト</a>
 </div>
 {% endblock content %}
